Handle vdm2c build jobs in Jenkinsfile